--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     <header></header>
     <div class="main">
       <nav>
-        <a href="index.html"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
+        <a href="index.html">Home</a>
+        <a href="about.html"></a>
+        <a href=""></a>
+        <a href="https://youtube.com/@noahaxelolsson">YouTube</a>
+        <a href="https://svlr-noah--olsson-xyz.translate.goog/?_x_tr_sl=en&_x_tr_tl=sv&_x_tr_hl=en-US&_x_tr_pto=wapp">Svenska</a>
       </nav>
       <article>
-        <h2></h2>
-        <p></p>
+        <h2>SVLR - Skåne's Värsjö Light Railway</h2>
+        <p>A small garden railway in Skåne's Värsjö built to 15-inch gauge.</p>
         <img src="" alt="">
         <p></p>
       </article>
