--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <article>
         <h2>SVLR - Skåne's Värsjö Light Railway</h2>
         <p>A small garden railway in Skåne's Värsjö built to 15-inch gauge.</p>
-        <img src="" alt="">
+        <img src="http://svlr.noah-olsson.xyz/Skånes Värsjö Light Railway.jpg" alt="">
         <p></p>
       </article>
     </div>
